horizontal scrollbar fix

--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -19,8 +19,7 @@
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-
-  width: 100vw;
+  width: 9999px;
   height: 1px;
   background-color: var(--gray);
   pointer-events: none;
